@startuml

title __STUDYACTIVITY's Class Diagram__\n

  namespace com.xiaoma {
    namespace studyActivity {
      class com.xiaoma.studyActivity.ComponentActivity {
          ~ mBtnBind : Button
          ~ mBtnGet : Button
          ~ mBtnJump : Button
          ~ mBtnStart : Button
          ~ mBtnStop : Button
          ~ mBtnUnbind : Button
          ~ mRvList : RecyclerView
          {static} - TAG : String
          - connection : ServiceConnection
          - intent : Intent
          {static} - mHandler : Handler
          + onClick()
          # onCreate()
          # onDestroy()
          # onPause()
          # onRestart()
          # onRestoreInstanceState()
          # onResume()
          # onSaveInstanceState()
          # onStart()
          # onStop()
          - jump2B()
          - sendData()
          - setRecyclerView()
      }
    }
  }
  

  namespace com.xiaoma {
    namespace studyActivity {
      class com.xiaoma.studyActivity.MyRecycleView {
          + MyRecycleView()
          # onLayout()
      }
    }
  }
  

  namespace com.xiaoma {
    namespace studyActivity {
      class com.xiaoma.studyActivity.NewActivity {
          ~ mBtnNotification : Button
          ~ mBtnShow : Button
          {static} - TAG : String
          + onClick()
          + onWindowFocusChanged()
          + sendChatMsg()
          + sendSubscribeMsg()
          # onCreate()
          # onDestroy()
          # onPause()
          # onResume()
          # onStart()
          # onStop()
          - createNotificationChannel()
          - studyThreadLocal()
      }
    }
  }
  

  namespace com.xiaoma {
    namespace studyActivity {
      class com.xiaoma.studyActivity.NewActivity.MyHandler {
          - mAct : WeakReference<NewActivity>
          + MyHandler()
          + handleMessage()
      }
    }
  }
  

  namespace com.xiaoma {
    namespace studyActivity {
      class com.xiaoma.studyActivity.NewAdapter {
          + getItemCount()
          + getItemId()
          + onBindViewHolder()
          + onCreateViewHolder()
      }
    }
  }
  

  namespace com.xiaoma {
    namespace studyActivity {
      class com.xiaoma.studyActivity.NewAdapter.MyViewHolder {
          + MyViewHolder()
      }
    }
  }
  

  namespace com.xiaoma {
    namespace studyActivity {
      class com.xiaoma.studyActivity.NewFragment {
          {static} - TAG : String
          + onActivityCreated()
          + onAttach()
          + onCreate()
          + onCreateView()
          + onDestroy()
          + onDestroyView()
          + onDetach()
          + onPause()
          + onResume()
          + onStart()
          + onStop()
          + setUserVisibleHint()
      }
    }
  }
  

  namespace com.xiaoma {
    namespace studyActivity {
      class com.xiaoma.studyActivity.NotProfiler {
          # onCreate()
      }
    }
  }
  

  namespace com.xiaoma {
    namespace studyActivity {
      class com.xiaoma.studyActivity.Profiler {
          # onCreate()
      }
    }
  }
  

  com.xiaoma.studyActivity.ComponentActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.xiaoma.studyActivity.ComponentActivity o-- com.xiaoma.mqtt.MQTTService.MyBinder : myBinder
  com.xiaoma.studyActivity.MyRecycleView -up-|> androidx.recyclerview.widget.RecyclerView
  com.xiaoma.studyActivity.NewActivity .up.|> android.view.View.OnClickListener
  com.xiaoma.studyActivity.NewActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.xiaoma.studyActivity.NewActivity +-down- com.xiaoma.studyActivity.NewActivity.MyHandler
  com.xiaoma.studyActivity.NewActivity.MyHandler -up-|> android.os.Handler
  com.xiaoma.studyActivity.NewAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.xiaoma.studyActivity.NewAdapter +-down- com.xiaoma.studyActivity.NewAdapter.MyViewHolder
  com.xiaoma.studyActivity.NewAdapter.MyViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.xiaoma.studyActivity.NewFragment -up-|> androidx.fragment.app.Fragment
  com.xiaoma.studyActivity.NotProfiler -up-|> androidx.appcompat.app.AppCompatActivity
  com.xiaoma.studyActivity.Profiler -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
